load("@pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "machines",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        "//core/structs",
        requirement("transitions"),
        requirement("cachetools"),
        requirement("loguru"),
    ],
)
